fix: spacing and margin for right side

--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
 *{
     --left-panel-width: 25vw;
     font-family: Arial, Helvetica, sans-serif;
+    --gray-1: rgb(188, 188, 188);
+    --gray-2: rgb(113, 113, 113);
+    --gray-3: rgb(92, 92, 92);
 }
 
 @font-face {
@@ -14,11 +17,10 @@
 
 
 
-body, .container{
+.container{
 width: 100vw;
 height: 100vh;
 color:black;
-
 }
 
 .container{
@@ -36,11 +38,7 @@ color:black;
 /* plant */
 .plant{
     width: var(--left-panel-width);
-    /* width:fit-content; */
-    /* width:100%; */
     height:100%;
-    object-fit: cover;
-    /* min-height:570px; */
     z-index: -1;
 }
 
@@ -80,7 +78,7 @@ span.odin-span{
 
 p{
     font-size: 19px;
-    max-width: 15em;
+    /* max-width: 15em; */
 }
 
 .left{
@@ -88,15 +86,15 @@ p{
 }
 
 .right{
-    background-color: gray;
-    flex: 1 1 1200px;
+    flex: 1;
     display:flex;
     flex-direction: column;
+    background-color: var(--gray-2);
+
 }
 
-li{
-    list-style: none;
-}
+
+
 input:focus{}
 
 
@@ -111,6 +109,8 @@ ul{
     flex-wrap: wrap;
 }
 li{
+    list-style: none;
+
     margin: 15px;
     flex: 1 1 45%;
     display:flex;
@@ -118,3 +118,24 @@ li{
     width: 100px
 }
 
+fieldset{
+    margin:0px;
+    border: none;
+}
+
+.top{
+    background-color: var(--gray-1);
+    padding-left:58px
+}
+.middle{
+    background-color: var(--gray-3);
+
+}
+.bottom{
+    background-color: var(--gray-2);
+    padding: 20px 0 10px 66px;
+
+}
+.submit-button{
+    margin: 20px 0 10px 66px;
+}
